syntax = "proto3";

package addressbook.addressbook;

import "amino/amino.proto";
import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "addressbook/addressbook/params.proto";
import "addressbook/addressbook/contact.proto";

option go_package = "addressbook/x/addressbook/types";

// Query defines the gRPC querier service.
service Query {
  
  // Parameters queries the parameters of the module.
  rpc Params (QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/addressbook/addressbook/params";
  
  }
  
  // Queries a list of ShowContact items.
  rpc ShowContact (QueryShowContactRequest) returns (QueryShowContactResponse) {
    option (google.api.http).get = "/addressbook/addressbook/show_contact/{id}";
  
  }
  
  // Queries a list of ListContact items.
  rpc ListContact (QueryListContactRequest) returns (QueryListContactResponse) {
    option (google.api.http).get = "/addressbook/addressbook/list_contact";
  
  }
}
// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  
  // params holds all the parameters of this module.
  Params params = 1 [(gogoproto.nullable) = false, (amino.dont_omitempty) = true];
}

message QueryShowContactRequest {
  uint64 id = 1;
}

message QueryShowContactResponse {
  Contact contact = 1 [(gogoproto.nullable) = false];
}

message QueryListContactRequest {
  cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

message QueryListContactResponse {
  repeated Contact contact = 1 [(gogoproto.nullable) = false];
  cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

